serving Leaftlet locally to avoid unsecure request in prod

--- a/front/public/index.html
+++ b/front/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+    <link rel="stylesheet" href="%PUBLIC_URL%/Leaflet.css" />
+    <script src="%PUBLIC_URL%/Leaftlet.js"></script>
     <meta name="theme-color" content="#000000" />
     <title>myTEAM - Sports Community - Sports lovers, let's play together !</title>
     <meta
